# hassio-addons

./: .gitignore  .gitmodules  ADDON_OVERVIEW.md  Dockerfile  README.md  build.yaml  config.yaml  ha_mic_filter_service.py  repository.json
.github/: addons.yaml
.github/workflows/: addon-build.yml  sync-printer-submodule.yml
addon-nginx-proxy-manager/.github/workflows/: sync_main_project.yml
addon-nginx-proxy-manager/proxy-manager/: Dockerfile  build.yaml  config.yaml
addon-nginx-proxy-manager/proxy-manager/patches/: 0010-ingress-publicpath.patch  0011-api-publicpath.patch
addon-nginx-proxy-manager/proxy-manager/scripts/: frontend-rewrite.sh
addon-nginx-proxy-manager/proxy-manager/translations/: en.yaml
assist_microphone/: Dockerfile  README.md  build.yaml  config.yaml
assist_microphone/translations/: en.yaml
duplex-scan-for-any-printer/: .dockerignore  .gitignore  Dockerfile  Dockerfile.local  LICENSE  README.md  build.yaml  config.local.template.yaml  config.yaml  pytest.ini  requirements.txt  run.py  start.bat  test-docker.ps1  test-docker.sh
duplex-scan-for-any-printer/deploy/: install.sh  run-agent.sh  scan-agent.service  setup-cups.sh
duplex-scan-for-any-printer/docs/: code-standards.md  development-roadmap.md  project-changelog.md  system-architecture.md
duplex-scan-for-any-printer/src/: main.py  orchestrator_utils.py  web_ui_server.py
duplex-scan-for-any-printer/src/agent/: agent_api.py  config.py  config_validator.py  constants.py  error_handler.py  ftp_server.py  ftp_watcher.py  image_processing.py  layout_engine.py  logger.py  metadata_generator.py  notification_manager.py  pdf_generator.py  print_dispatcher.py  resource_monitor.py  session_manager.py  telegram_bot.py  (+1 more)
duplex-scan-for-any-printer/tests/: README.md  integration_tests_all.py  test_background_remover.py  test_config_validator.py  test_error_handling.py  test_ftp_magika.py  test_logging.py  test_main_card_2in1.py  test_main_scan_document.py  test_main_scan_duplex.py  test_metadata_workflow.py  test_resource_monitor.py  test_telegram_bot.py  test_web_ui_api.py
duplex-scan-for-any-printer/web_ui/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
ecovacs-bumper/: Dockerfile  README.md  build.yaml  config.yaml
ecovacs-bumper/translations/: en.yaml
ha-mic-filter/: .gitignore  CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  audio_pipeline_manager.py  build.yaml  config.yaml  device_constants.py  ha_mic_filter_service.py  pulse_audio_manager.py  run.sh  test_fixes.py
ha-mic-filter-v2/: Dockerfile  build.yaml  config.yaml  docker-compose.yml  run.sh
ha-mic-filter-v2/config/: options.json
ha-mic-filter/obs-plugin/: CMakeLists.txt  README.md  build_all.sh  python_realtime_test.py
ha-mic-filter/obs-plugin/include/: obs_pipeline.h
ha-mic-filter/obs-plugin/src/: audio_utils.c  audio_utils.h  filter_wrapper_compressor.c  filter_wrapper_compressor.h  filter_wrapper_eq.c  filter_wrapper_eq.h  filter_wrapper_expander.c  filter_wrapper_gain.c  filter_wrapper_gain.h  filter_wrapper_vst.c  filter_wrapper_vst.h  pipeline_manager.c  pipeline_manager.h
ha-mic-filter/scripts/: bump_version.py  debug_pulseaudio.sh  diagnose_audio.py  restart_pulseaudio.sh  restart_service.sh  test_audio_pipeline.py
ha-mic-filter/translations/: en.yaml
obs-plugin/: CMakeLists.txt  README_ARCHITECTURE.md  README_VIETNAMESE.md  audio_pipeline_manager.py  build_all.sh  demo_speex_vs_rnnoise.py  demo_vst_plugin.py  python_realtime_test.py  requirements.txt
obs-plugin/examples/: simple_test.c
obs-plugin/src/: filter_wrapper_eq.c  filter_wrapper_expander.c  filter_wrapper_expander.h  filter_wrapper_noise_suppress.c  filter_wrapper_noise_suppress.h  memory_utils.c  memory_utils.h  obs_pipeline.c  pipeline_manager.c
translations/: en.yaml
wyoming-porcupine/: DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  requirements.txt  setup.py
wyoming-porcupine/translations/: en.yaml
(+64 files in other folders)
